[gd_scene load_steps=7 format=3 uid="uid://caxdrs5u1huad"]

[ext_resource type="Script" path="res://wallLight.gd" id="1_8suhu"]
[ext_resource type="Texture2D" uid="uid://deogg3owr5uw4" path="res://light_sprites/2024_04_09_0xh_Kleki.png" id="2_m6hen"]
[ext_resource type="AudioStream" uid="uid://yx1t1mkv8rjh" path="res://bulbShatter.mp3" id="3_tcq4f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kciae"]
size = Vector2(81, 196)

[sub_resource type="Animation" id="Animation_suvwb"]
resource_name = "flicker"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2xhm"]
_data = {
"flicker": SubResource("Animation_suvwb")
}

[node name="wallLight" type="Area2D"]
z_index = 2
position = Vector2(176, 181)
collision_layer = 8
collision_mask = 5
script = ExtResource("1_8suhu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-40.5, 0)
shape = SubResource("RectangleShape2D_kciae")
debug_color = Color(0.94902, 0.756863, 0.623529, 0.419608)

[node name="PointLight2D" type="PointLight2D" parent="."]
rotation = 3.14159
texture = ExtResource("2_m6hen")

[node name="disruptTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f2xhm")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tcq4f")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="disruptTimer" to="." method="_on_disrupt_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
